--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:59:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:00:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,44 +140,12 @@ body {
   </thead>
   <tbody>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 7</td>
-      <td class="greyout">Russell Henley +4
-+3 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout">Xander Schauffele(W) +4
-+2 thru 8</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-11</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Dustin Johnson(W) -2
 +1 thru 9</td>
       <td>Patrick Cantlay -2
@@ -188,28 +156,12 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Patrick Cantlay -2
-E thru 9</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 8</td>
-      <td class="greyout">Viktor Hovland +1
-+1 thru 8</td>
-    </tr>
-    <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Talor Gooch E
@@ -217,6 +169,38 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
       <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 14</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 7</td>
+      <td class="greyout">Russell Henley +4
++3 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 14</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout">Xander Schauffele(W) +4
 +2 thru 8</td>
     </tr>
     <tr>
@@ -236,12 +220,28 @@ E thru 7</td>
 +2 thru 8</td>
     </tr>
     <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 14</td>
+      <td>Patrick Cantlay -2
+E thru 9</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 8</td>
+      <td class="greyout">Viktor Hovland +1
++1 thru 8</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Viktor Hovland(W) +1
@@ -250,22 +250,6 @@ Not started</td>
 +1 thru 10</td>
       <td class="greyout">Sam Burns +6
 +3 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 8</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -284,28 +268,12 @@ Not started</td>
 E thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 9</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Tiger Woods -1
 Not started</td>
       <td>Jon Rahm(W) +1
@@ -316,26 +284,26 @@ Not started</td>
 +3 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
 Not started</td>
-      <td>Corey Conners(W) -3
--1 thru 13</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 8</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 7</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-7</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay(W) -2
@@ -353,7 +321,7 @@ E thru 9</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
       <td>Robert MacIntyre +1
@@ -369,7 +337,7 @@ E thru 7</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Talor Gooch E
 Not started</td>
       <td>Hideki Matsuyama E
@@ -380,36 +348,36 @@ Not started</td>
 E thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-6</td>
-      <td>Corey Conners -3
--1 thru 13</td>
       <td>Scottie Scheffler -3
 Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Jon Rahm(W) +1
--1 thru 8</td>
-      <td class="greyout leftborder">Webb Simpson +1
-+2 thru 11</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 8</td>
+      <td>Patrick Cantlay -2
+E thru 9</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -3
+      <td>Cameron Smith -4
 Not started</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
+      <td>Corey Conners(W) -3
+-1 thru 14</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 8</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 8</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -449,7 +417,7 @@ E thru 7</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Viktor Hovland +1
@@ -476,12 +444,44 @@ E thru 7</td>
 +2 thru 8</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-5</td>
+      <td>Corey Conners -3
+-1 thru 14</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Jon Rahm(W) +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Webb Simpson +1
++2 thru 11</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 14</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 8</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Viktor Hovland +1
 +1 thru 8</td>
       <td>Jordan Spieth +1
@@ -497,7 +497,7 @@ Not started</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Marc Leishman +2
@@ -508,26 +508,10 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-E thru 7</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-5</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Joaquin Niemann -3
 Not started</td>
       <td>Brian Harman E
@@ -543,7 +527,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners(W) -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Daniel Berger -1
 Not started</td>
       <td>Collin Morikawa -1
@@ -556,42 +540,26 @@ E thru 15</td>
 -1 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Collin Morikawa -1
--2 thru 9</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Rory McIlroy +1
-E thru 7</td>
-      <td class="greyout">Xander Schauffele(W) +4
-+2 thru 8</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
 Not started</td>
-      <td>Patrick Cantlay -2
-E thru 9</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Brooks Koepka +3
+      <td>Matthew Fitzpatrick -1
 E thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 7</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Shane Lowry +1
@@ -652,22 +620,6 @@ Not started</td>
 +2 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">-3</td>
-      <td>Patrick Cantlay -2
-E thru 9</td>
-      <td>Collin Morikawa -1
--2 thru 9</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
--1 thru 8</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 8</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -4
@@ -682,6 +634,38 @@ E thru 7</td>
 +2 thru 8</td>
       <td class="greyout">Sam Burns +6
 +3 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 14</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Rory McIlroy +1
+E thru 7</td>
+      <td class="greyout">Xander Schauffele(W) +4
++2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 9</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Brooks Koepka +3
+E thru 7</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -732,6 +716,22 @@ Not started</td>
 E thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">-2</td>
+      <td>Patrick Cantlay -2
+E thru 9</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Viktor Hovland(W) +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 8</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 8</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -762,38 +762,6 @@ Not started</td>
 -1 thru 8</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-2</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
-      <td>Collin Morikawa -1
--2 thru 9</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Rory McIlroy +1
-E thru 7</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners -3
--1 thru 13</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Rory McIlroy +1
-E thru 7</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -842,6 +810,38 @@ E thru 7</td>
 Not started</td>
       <td class="greyout">Xander Schauffele +4
 +2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-1</td>
+      <td>Tiger Woods(W) -1
+Not started</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td class="greyout leftborder">Rory McIlroy +1
+E thru 7</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -3
+-1 thru 14</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Rory McIlroy +1
+E thru 7</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 7</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -911,7 +911,7 @@ Not started</td>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">0</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Jon Rahm(W) +1
 -1 thru 8</td>
       <td>Rory McIlroy +1
@@ -956,22 +956,6 @@ Not started</td>
 +2 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 8</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">2</td>
       <td>Collin Morikawa -1
@@ -988,10 +972,26 @@ E thru 13</td>
 E thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">3</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Viktor Hovland +1
++1 thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td>Jordan Spieth +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Sam Burns +6
++3 thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
+      <td class="bigbold">3</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
       <td>Jon Rahm(W) +1
 -1 thru 8</td>
       <td>Viktor Hovland +1
@@ -1021,11 +1021,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Scottie Scheffler -3
 Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
       <td>Brooks Koepka +3
 E thru 7</td>
       <td>Justin Thomas(W) +4
