--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:59:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:00:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,29 +147,13 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Jordan Spieth +1
 -1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +4
 +2 thru 8</td>
       <td class="greyout">Sam Burns +6
 +3 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 9</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -185,6 +169,22 @@ E thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
       <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 9</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -220,28 +220,12 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-E thru 7</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 7</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Viktor Hovland +1
 +1 thru 8</td>
       <td>Jordan Spieth +1
@@ -252,15 +236,15 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
-      <td>Collin Morikawa -1
--2 thru 9</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Tony Finau -1
+      <td>Cameron Smith -4
 Not started</td>
-      <td>Daniel Berger -1
+      <td>Matthew Fitzpatrick -1
+E thru 7</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 7</td>
@@ -271,7 +255,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners(W) -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
       <td>Daniel Berger -1
@@ -287,7 +271,7 @@ E thru 15</td>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
       <td>Jon Rahm +1
@@ -296,6 +280,22 @@ E thru 9</td>
 +1 thru 10</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-3</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 7</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -316,22 +316,6 @@ Not started</td>
 E thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 8</td>
-      <td>Jon Rahm +1
--1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -348,10 +332,26 @@ E thru 9</td>
 E thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Jon Rahm +1
+-1 thru 8</td>
+      <td>Jordan Spieth +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Dustin Johnson -2
 +1 thru 9</td>
       <td>Xander Schauffele(W) +4
@@ -359,7 +359,7 @@ E thru 7</td>
       <td>Justin Thomas +4
 Not started</td>
       <td class="greyout leftborder">Russell Henley +4
-+3 thru 13</td>
++3 thru 14</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -383,7 +383,7 @@ E thru 1</td>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -3
--1 thru 13</td>
+-1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 8</td>
       <td>Jordan Spieth +1
