--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:01:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:01:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -324,12 +324,12 @@ Not started</td>
 -1 thru 14</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
-      <td>Robert MacIntyre +1
-E thru 15</td>
-      <td class="greyout leftborder">Rory McIlroy +1
+      <td>Rory McIlroy +1
 E thru 7</td>
-      <td class="greyout">Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 9</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -532,12 +532,12 @@ Not started</td>
 Not started</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
-      <td>Robert MacIntyre +1
-E thru 15</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 -1 thru 9</td>
-      <td class="greyout">Jordan Spieth +1
+      <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 8</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
