--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:01:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:01:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -264,8 +264,8 @@ Not started</td>
 -1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 8</td>
-      <td class="greyout">Robert MacIntyre +1
-E thru 15</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
