--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:16:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:17:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Talor Gooch E
@@ -161,7 +161,7 @@ E thru 8</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Will Zalatoris E
@@ -193,7 +193,7 @@ E thru 8</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Dustin Johnson(W) -2
 +1 thru 10</td>
       <td>Patrick Cantlay -2
@@ -225,7 +225,7 @@ E thru 8</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Will Zalatoris E
@@ -241,7 +241,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
       <td>Will Zalatoris E
@@ -257,7 +257,7 @@ E thru 9</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Viktor Hovland(W) +1
@@ -289,7 +289,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Viktor Hovland +1
@@ -305,7 +305,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Tiger Woods -1
 Not started</td>
       <td>Jon Rahm(W) +1
@@ -335,7 +335,7 @@ Not started</td>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-7</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay(W) -2
@@ -353,7 +353,7 @@ E thru 9</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 8</td>
       <td>Jordan Spieth +1
@@ -369,7 +369,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
       <td>Rory McIlroy +1
@@ -385,7 +385,7 @@ E thru 8</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Marc Leishman +2
@@ -401,7 +401,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Talor Gooch E
 E thru 1</td>
       <td>Hideki Matsuyama E
@@ -433,7 +433,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners(W) -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
       <td>Jon Rahm +1
@@ -479,7 +479,7 @@ E thru 8</td>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-5</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Will Zalatoris E
@@ -497,7 +497,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
       <td>Jon Rahm +1
@@ -511,7 +511,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners(W) -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Daniel Berger -1
 Not started</td>
       <td>Collin Morikawa -1
@@ -543,7 +543,7 @@ Not started</td>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Shane Lowry +1
@@ -591,7 +591,7 @@ Not started</td>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Joaquin Niemann -3
 Not started</td>
       <td>Shane Lowry(W) +1
@@ -639,7 +639,7 @@ E thru 8</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Collin Morikawa -1
 -2 thru 10</td>
       <td>Will Zalatoris E
@@ -831,7 +831,7 @@ Not started</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
       <td>Rory McIlroy +1
@@ -911,7 +911,7 @@ Not started</td>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">0</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Jon Rahm(W) +1
 -1 thru 9</td>
       <td>Rory McIlroy +1
@@ -966,10 +966,10 @@ Not started</td>
 -1 thru 9</td>
       <td>Jordan Spieth +1
 -1 thru 9</td>
-      <td class="greyout leftborder">Patrick Reed +2
-E thru 13</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 8</td>
+      <td class="greyout">Patrick Reed +3
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -1049,7 +1049,7 @@ Not started</td>
       <td class="greyout leftborder">Sam Burns +6
 +3 thru 10</td>
       <td class="greyout">Justin Rose +8
-+4 thru 15</td>
++4 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
