--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:16:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:17:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Jordan Spieth +1
 -1 thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +4
@@ -177,7 +177,7 @@ E thru 8</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 8</td>
       <td>Jordan Spieth +1
@@ -255,7 +255,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners(W) -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Collin Morikawa -1
 -2 thru 10</td>
       <td>Daniel Berger -1
@@ -271,7 +271,7 @@ Not started</td>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
       <td>Jon Rahm +1
@@ -351,7 +351,7 @@ E thru 8</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Dustin Johnson -2
 +1 thru 10</td>
       <td>Xander Schauffele(W) +4
@@ -364,26 +364,10 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 8</td>
-      <td>Jon Rahm +1
--1 thru 9</td>
-      <td>Patrick Reed +2
-E thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 8</td>
-      <td class="greyout">Luke List +5
-E thru 2</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -3
--1 thru 14</td>
+-1 thru 15</td>
       <td>Jon Rahm +1
 -1 thru 9</td>
       <td>Jordan Spieth +1
@@ -394,6 +378,22 @@ Not started</td>
 +2 thru 9</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa -1
+-2 thru 10</td>
+      <td>Viktor Hovland(W) +1
++1 thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 9</td>
+      <td>Brooks Koepka +3
+E thru 8</td>
+      <td class="greyout leftborder">Patrick Reed +3
++1 thru 14</td>
+      <td class="greyout">Luke List +5
+E thru 2</td>
     </tr>
   </tbody>
 </table>
